chore: refactor integrations (#1)
* chore: cleanup integration config

* chore: cleanup eslint config

* fix: middleware setup

* chore: absolute imports

* chore: improve eslint setup

--- a/apps/middleware/package.json
+++ b/apps/middleware/package.json
@@ -4,15 +4,19 @@
   "private": true,
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
-    "build": "echo 'Add build script here'",
+    "build": "tsc",
+    "start": "node lib/src/index.js",
     "test": "echo 'Add test script here'",
     "lint": "echo 'Add lint script here'"
   },
   "dependencies": {
+    "@fakestore/api-client": "*",
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
     "@vue-storefront/middleware": "^3.8.1",
+    "@vue-storefront/storyblok-api": "*",
     "consola": "^3.2.3",
+    "dotenv": "^16.4.5",
     "ts-node-dev": "^2.0.0"
   }
 }
