--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -4,16 +4,14 @@
   "private": true,
   "files": [
     "library.js",
-    "next.js",
-    "react-internal.js"
+    "next.js"
   ],
   "devDependencies": {
-    "@vercel/style-guide": "^5.1.0",
-    "eslint-config-turbo": "^1.11.3",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-only-warn": "^1.1.0",
-    "@typescript-eslint/parser": "^6.17.0",
-    "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "@eslint/js": "^9.1.1",
+    "@typescript-eslint/parser": "7.2.0",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.2.2",
+    "typescript-eslint": "7.2.0",
     "typescript": "^5.3.3"
   }
 }
