--- a/apps/storefront/tsconfig.json
+++ b/apps/storefront/tsconfig.json
@@ -5,7 +5,12 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "@/components/*": ["components/*"],
+      "@/sdk/*": ["sdk/*"]
+    }
   },
   "include": [
     "next-env.d.ts",
