--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "devDependencies": {
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "eslint": "^8.56.0",
     "prettier": "^3.1.1",
     "rollup": "^4.14.3",
     "turbo": "latest"
