--- a/packages/fakestore/package.json
+++ b/packages/fakestore/package.json
@@ -23,7 +23,9 @@
     "axios": "^0.21.1"
   },
   "devDependencies": {
-    "@rollup/plugin-json": "^6.1.0"
+    "@repo/eslint-config": "*",
+    "@rollup/plugin-json": "^6.1.0",
+    "@vue-storefront/jest-config": "0.0.4"
   },
   "files": [
     "lib/**/*",
