--- a/packages/fakestore/package.json
+++ b/packages/fakestore/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@fakestore/api-client",
+  "name": "@vue-storefront/fakestore-api",
   "version": "0.0.4",
   "sideEffects": false,
   "server": "server/index.js",
@@ -8,7 +8,7 @@
   "types": "lib/index.d.ts",
   "license": "VSFEL",
   "engines": {
-    "node": ">=16.x"
+    "node": ">=18.x"
   },
   "scripts": {
     "prepublishOnly": "yarn build",
@@ -24,8 +24,7 @@
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
-    "@rollup/plugin-json": "^6.1.0",
-    "@vue-storefront/jest-config": "0.0.4"
+    "@vue-storefront/jest-config": "^0.0.5"
   },
   "files": [
     "lib/**/*",
